// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToHtml(isomorphicComponent) <Connect /> nested isomorphic component renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>
      <ul>
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-nested--connected", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "iso-nested--connected--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": {
          "v": 3,
          "w": 8
        },
        "iso-simple--connected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) <Connect /> non-isomorphic component with mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div>
    <div data-reactroot="">Hello ;)</div>
  </div>
</body>
`;

exports[`renderToHtml(isomorphicComponent) <Connect /> non-isomorphic component without mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div class="mount-point">
    <div data-reactroot="">Hello ;)</div>
  </div>
</body>
`;

exports[`renderToHtml(isomorphicComponent) <Connect /> simple isomorphic component with mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef" class="mount-point">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-simple--connected", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "iso-simple--connected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) <Connect /> simple isomorphic component without mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-simple--connected", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "iso-simple--connected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) <Connect /> styled nested isomorphic component renders correctly 1`] = `
<head>
  <style data-styled="bLXHOZ gjNiSI" data-styled-version="4.2.0">
    /* sc-component-id: StyledSection-sc-1e5fo1a-0 */
    .bLXHOZ {
      padding: 7px;
      background: #bbb;
    }

    /* sc-component-id: StyledList-sc-1e5fo1a-1 */
    .gjNiSI {
      margin: 7px;
      background: #666;
      color: #ddd;
    }
  </style>
</head>

<body>
  <div id="0123456789abcdef">
    <section class="StyledSection-sc-1e5fo1a-0 bLXHOZ">
      <ul class="StyledList-sc-1e5fo1a-1 gjNiSI">
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-nested-with-styles--connected", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "iso-nested-with-styles--connected--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": {
          "v": 3,
          "w": 8
        },
        "iso-simple--connected--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) onData child overrides parent; last sibling wins accumulates the expected data 1`] = `
Object {
  "maxAge": 60,
}
`;

exports[`renderToHtml(isomorphicComponent) onData parent overrides child; first sibling wins accumulates the expected data 1`] = `
Object {
  "maxAge": 30,
}
`;

exports[`renderToHtml(isomorphicComponent) useIsomorphicContext() nested isomorphic component renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>
      <ul>
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-nested--hooked", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "iso-nested--hooked--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": {
          "v": 3,
          "w": 8
        },
        "iso-simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) useIsomorphicContext() non-isomorphic component with mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div>
    <div data-reactroot="">Hello ;)</div>
  </div>
</body>
`;

exports[`renderToHtml(isomorphicComponent) useIsomorphicContext() non-isomorphic component without mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div class="mount-point">
    <div data-reactroot="">Hello ;)</div>
  </div>
</body>
`;

exports[`renderToHtml(isomorphicComponent) useIsomorphicContext() simple isomorphic component with mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef" class="mount-point">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-simple--hooked", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "iso-simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) useIsomorphicContext() simple isomorphic component without mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-simple--hooked", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "iso-simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) useIsomorphicContext() styled nested isomorphic component renders correctly 1`] = `
<head>
  <style data-styled="Duetr ceUwuZ" data-styled-version="4.2.0">
    /* sc-component-id: StyledSection-xukvp3-0 */
    .Duetr {
      padding: 7px;
      background: #bbb;
    }

    /* sc-component-id: StyledList-xukvp3-1 */
    .ceUwuZ {
      margin: 7px;
      background: #666;
      color: #ddd;
    }
  </style>
</head>

<body>
  <div id="0123456789abcdef">
    <section class="StyledSection-xukvp3-0 Duetr">
      <ul class="StyledList-xukvp3-1 ceUwuZ">
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-nested-with-styles--hooked", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "iso-nested-with-styles--hooked--27152bfa9d152695b053e71d6ee08263979ed379d64fa16bfd8efdbf85ee0ffa": {
          "v": 3,
          "w": 8
        },
        "iso-simple--hooked--f042b037451958bdc45147be8b9d937045a13c3523f59ba3514bebb4db43730c": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;
